--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,12 @@
     </head>
     <body>
         <main>
+            <nav>
+                <a href="/">All</a> |
+                <a href="/Creator">Creator</a> |
+                <a href="/Star Wars">Star Wars</a> |
+                <a href="/Creator Expert">Creator Expert</a>
+            </nav>
             {% block body %}{% endblock %}
         </main>
     </body>
