--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,9 +17,9 @@
         <main>
             <nav>
                 <a href="/">All</a> |
-                <a href="/Creator">Creator</a> |
-                <a href="/Star Wars">Star Wars</a> |
-                <a href="/Creator Expert">Creator Expert</a>
+                <a href="/creator">Creator</a> |
+                <a href="/star_wars">Star Wars</a> |
+                <a href="/creator_expert">Creator Expert</a>
             </nav>
             {% block body %}{% endblock %}
         </main>
