--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,8 @@
                 <a href="/">All</a> |
                 <a href="/creator">Creator</a> |
                 <a href="/star_wars">Star Wars</a> |
-                <a href="/creator_expert">Creator Expert</a>
+                <a href="/creator_expert">Creator Expert</a> |
+                <a href="/harry_potter">Harry Potter</a>
             </nav>
             {% block body %}{% endblock %}
         </main>
