--- a/templates/lego.html.twig
+++ b/templates/lego.html.twig
@@ -1,12 +1,19 @@
 {% extends "./base.html.twig" %}
 {% block body %}
 {% for lego in legos %}
+  <nav>
+    <a href="/">All</a> |
+    <a href="/Creator">Creator</a> |
+    <a href="/Star Wars">Star Wars</a> |
+    <a href="/Creator Expert">Creator Expert</a> |
+    <a href="/Harry Potter">Harry Potter</a>
+  </nav>
   <div class="lego_card">
         <div class="info_section">
           <div class="lego_header">
             <img class="locandina" src="/images/{{lego.boxImage}}"/>
             <h1>{{lego.name}}</h1>
-            <h4>Collection : {{lego.collection}}</h4>
+            <h4>Collection : {{lego.collection.name}}</h4>
             <span class="pieces">Pièces : {{lego.pieces}}</span>
             <p class="price">{{lego.price}}€</p><br>
             <a href="index.php?buy={{lego.id}}"><button>Buy</button></a>
